deploy/scrumwala-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: scrumwala-service
  labels:
    run: scrumwala-service
spec:
  selector:
    app: scrumwala-pod
  ports:
    - port: 8081
      targetPort: 8081
  # type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: scrumwala-deployment
  labels:
    app: scrumwala-deployment
spec:
  replicas: 1
  selector:
    matchLabels:
      app: scrumwala-pod
  template:
    metadata:
      labels:
        app: scrumwala-pod
    spec:
      containers:
      - name: scrumwala
        image: docker.io/hussaingandhi/scrumwala:3.0.1 # {"$imagepolicy": "hussain-flux:scrumwala"}
        ports:
        - containerPort: 8081
        command: ["/bin/sh", "-c"]
        args: ["php artisan serve --host 0.0.0.0 --port 8081"]
        # args: ["php composer.phar update --no-scripts --no-interaction && php composer.phar install --no-scripts --no-interaction && php artisan migrate --force && php artisan serve --host 0.0.0.0 --port 8081"]
